Add config and server

--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/user99775533LiterallyPredictedThis/learnnode/issues"
   },
   "homepage": "https://github.com/user99775533LiterallyPredictedThis/learnnode#readme",
   "dependencies": {
     "webpack": "^5.101.3"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.6.4",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
