--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx webpack --mode development",
+    "build": "npx webpack --mode production",
+    "serve": "npx webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,9 @@
     "webpack": "^5.101.3"
   },
   "devDependencies": {
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
