--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^5.6.4",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
+    "simple-nunjucks-loader": "^3.2.0",
     "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
