--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/user99775533LiterallyPredictedThis/learnnode#readme",
   "dependencies": {
+    "bulma": "^1.0.4",
     "surge": "^0.24.6",
     "webpack": "^5.101.3"
   },
