--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "vue": "^3.5.22",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
