--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bulma": "^1.0.4",
     "surge": "^0.24.6",
+    "vue-router": "^4.6.3",
     "webpack": "^5.101.3"
   },
   "devDependencies": {
