--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/user99775533LiterallyPredictedThis/learnnode#readme",
   "dependencies": {
+    "axios": "^1.12.2",
     "bulma": "^1.0.4",
     "surge": "^0.24.6",
     "vue-router": "^4.6.3",
