--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bulma": "^1.0.4",
+    "leaflet": "^1.9.4",
     "surge": "^0.24.6",
     "vue-router": "^4.6.3",
     "webpack": "^5.101.3"
