Add Websocket chat

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "npx webpack --mode development",
     "build": "npx webpack --mode production",
@@ -26,7 +27,8 @@
     "leaflet": "^1.9.4",
     "surge": "^0.24.6",
     "vue-router": "^4.6.3",
-    "webpack": "^5.101.3"
+    "webpack": "^5.101.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
