--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bulma": "^1.0.4",
+    "chalk": "^5.6.2",
     "leaflet": "^1.9.4",
     "surge": "^0.24.6",
     "vue-router": "^4.6.3",
