--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/user99775533LiterallyPredictedThis/learnnode#readme",
   "dependencies": {
     "axios": "^1.12.2",
+    "boxen": "^8.0.1",
     "bulma": "^1.0.4",
     "chalk": "^5.6.2",
     "inquirer": "^13.0.1",
