--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bulma": "^1.0.4",
     "chalk": "^5.6.2",
     "inquirer": "^13.0.1",
+    "keypress": "^0.2.1",
     "leaflet": "^1.9.4",
     "surge": "^0.24.6",
     "vue-router": "^4.6.3",
